// Copyright 2022 Strims contributors
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package strims.chat.v1;

option go_package = "github.com/MemeLabs/strims/pkg/apis/chat/v1;chatv1";
option java_package = "gg.strims.ppspp.proto";
option swift_prefix = "SCH";

import "chat/v1/chat.proto";

message ServerChangeEvent {
  Server server = 1;
}

message ServerDeleteEvent {
  Server server = 1;
}

message EmoteChangeEvent {
  Emote emote = 1;
}

message EmoteDeleteEvent {
  Emote emote = 1;
}

message ModifierChangeEvent {
  Modifier modifier = 1;
}

message ModifierDeleteEvent {
  Modifier modifier = 1;
}

message TagChangeEvent {
  Tag tag = 1;
}

message TagDeleteEvent {
  Tag tag = 1;
}

message UIConfigChangeEvent {
  UIConfig ui_config = 1;
}

message UIConfigHighlightChangeEvent {
  UIConfigHighlight ui_config_highlight = 1;
}

message UIConfigHighlightDeleteEvent {
  UIConfigHighlight ui_config_highlight = 1;
}

message UIConfigTagChangeEvent {
  UIConfigTag ui_config_tag = 1;
}

message UIConfigTagDeleteEvent {
  UIConfigTag ui_config_tag = 1;
}

message UIConfigIgnoreChangeEvent {
  UIConfigIgnore ui_config_ignore = 1;
}

message UIConfigIgnoreDeleteEvent {
  UIConfigIgnore ui_config_ignore = 1;
}


message SyncAssetsEvent {
  uint64 server_id = 1;
  bool force_unified_update = 2;
}

message WhisperThreadChangeEvent {
  WhisperThread whisper_thread = 1;
}

message WhisperThreadDeleteEvent {
  WhisperThread whisper_thread = 1;
}

message WhisperRecordChangeEvent {
  WhisperRecord whisper_record = 1;
}

message WhisperRecordDeleteEvent {
  WhisperRecord whisper_record = 1;
}
